<resources>
    <string name="app_name" translatable="false">Aimos</string>
    <string name="font_nautiluspompilius" translatable="false">fonts/nautiluspompilius.ttf</string>

    <string name="keyUpdateSuccess">Keys successfully updated</string>
    <string name="keyUpdateFailure">Error while updating keys, please try again.</string>
    <string name="updateKeysText"><u>Update Keys</u></string>
    <string name="pressMessageToShowText">Click on the message to read</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="sync">Sync</string>
    <string name="copy">Copy</string>
    <string name="del">Delete</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="properties">Properties</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="folderFirst">Folder first</string>

    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="dialogs">Dialogs</string>
    <string name="notifications">Notice</string>
    <string name="storage">Storage</string>
    <string name="loginText">Login</string>
    <string name="password_hint">Password</string>
    <string name="registrationText">Registration</string>
    <string name="loginHintText">Username</string>
    <string name="synchronizationText">Synchronization</string>
    <string name="toolbarSearchText">Search...</string>
    <string name="dialogLoadErrorText">Dialog load error</string>
    <string name="contactLoadErrorText">Contact load error</string>
    <string name="contactLoadText">Loading contacts</string>
    <string name="dialogLoadText">Loading dialogs</string>
    <string name="dialogLastMessageNameText" translatable="false">%s:</string>
    <string name="dialogLastMyMessageText">You:</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
</resources>
