<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_storage_copy_action"
        android:icon="@drawable/ic_status_sync"
        android:title="@string/copy"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_storage_move_action"
        android:icon="@drawable/ic_status_sync"
        android:title="@string/move"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_storage_del_action"
        android:icon="@drawable/ic_status_sync"
        android:title="@string/del"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_storage_properties_action"
        android:icon="@drawable/ic_status_sync"
        android:title="@string/properties"
        app:showAsAction="ifRoom"/>
</menu>