<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.DialogsFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/contact_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/contact_search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/bg_ui_rounded"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:hint="@string/toolbarSearchText"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/contact_delete_search_text"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="56dp"
                android:src="@drawable/ic_cross"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/contact_update_list"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_ui_rounded"
                android:padding="4dp"
                android:src="@drawable/ic_refresh"
                android:tint="@color/white" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/contacts_load_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contacts_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/contactLoadText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_load_error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/contactLoadErrorText"
                android:textSize="18sp" />

            <Button
                android:id="@+id/contacts_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Обновить"
                android:textSize="20dp" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contacts_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="ДРУЗЬЯ"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contacts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/adapter_contact"/>

            <TextView
                android:id="@+id/contact_search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="НАЙДЕНО"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contacts_list_searched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:listitem="@layout/adapter_contact_searched"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
